# bitvec-benchmarking

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_bitvec.rs
src/: lib.rs
