[package]
name = "bitvec-benchmarking"
version = "0.1.0"
edition = "2021"
description = "Benchmarking bit-vec implementations"
authors = ["Brooks Prumo <brooks@prumo.org>"]
license-file = "LICENSE.md"
publish = false

[dependencies]
bit-vec = "0.6.3"
bitvec = "1.0.1"
bv = "0.11.1"
rand = "0.8.5"
solana-nohash-hasher = "0.2.1"

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"

[[bench]]
name = "bench_bitvec"
harness = false
